# api/controllers/product.controller.js
@@ -1,6 +1,6 @@
 const Product = require("../models/product.model");
 const Category = require("../models/category.model");
-
+const mongoose = require("mongoose");
 //* GET ALL PRODUCTS
 const getAllProducts = async (req, res) => {
   try {
@@ -75,13 +75,8 @@ const createProduct = async (req, res) => {
   try {
     const { name, description, price, stock, images, categoryID, tags } = req.body;
 
-    if (!name || !price || !images || !categoryID) {
-      return res.status(400).json({ message: "Name, price, images, and categoryID are required" });
-    }
-
-    const categoryExists = await Category.exists({ _id: categoryID });
-    if (!categoryExists) {
-      return res.status(400).json({ message: `Category with ID ${categoryID} does not exist` });
+    if (!name || !description || !price || !images || images.length === 0) {
+      return res.status(400).json({ message: "Name, description, price, and at least one image are required" });
     }
 
     const productExists = await Product.exists({ name });
@@ -89,21 +84,32 @@ const createProduct = async (req, res) => {
       return res.status(400).json({ message: `Product with name ${name} already exists` });
     }
 
-    const newProduct = new Product({ name, description, price, stock, images, categoryID, tags });
+    const newProduct = new Product({
+      id: new mongoose.Types.ObjectId(),
+      name,
+      description,
+      price,
+      stock: stock || 0, // Default stock to 0 if not provided
+      images,
+      categoryID: categoryID || null, // Default categoryID to null if not provided
+      tags: tags || [],
+      created_at: new Date(),
+      updated_at: new Date()
+    });
+
     await newProduct.save();
     res.status(201).json(newProduct);
   } catch (error) {
     res.status(500).json({ message: error.message });
   }
 };
-
 //* UPDATE PRODUCT
 const updateProduct = async (req, res) => {
   try {
     const { id } = req.params;
-    const { name, description, price, stock, images, categoryID } = req.body;
+    const { name, price, stock } = req.body;
 
-    if (!name || !description || !price || !stock || !images || !categoryID) {
+    if (!name || !price || !stock) {
       return res.status(400).json({ message: "All fields are required" });
     }
 
@@ -111,13 +117,7 @@ const updateProduct = async (req, res) => {
     if (!product) {
       return res.status(404).json({ message: "Product not found" });
     }
-
-    const categoryExists = await Category.exists({ _id: categoryID });
-    if (!categoryExists) {
-      return res.status(400).json({ message: `Category with ID ${categoryID} does not exist` });
-    }
-
-    Object.assign(product, { name, description, price, stock, images, categoryID });
+    Object.assign(product, { name, price, stock });
     await product.save();
     res.status(200).json(product);
   } catch (error) {
